--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "virtual-pet",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "jest --verbose -watch"
+    "test": "jest --verbose"
   },
   "author": "",
   "license": "ISC",
